fix: Responsive slider - Reset Button vertical alignment.

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -2046,7 +2046,7 @@ input[type="text"].select2-search__field {
 .customize-control-ast-responsive-slider .ast-responsive-slider-reset {
   color: rgba(0, 0, 0, 0.2);
   position: absolute;
-  top: -28px;
+  top: -34px;
   left: 1.5em;
   display: inline-block;
   -webkit-transition: color 0.5s ease-in;
@@ -3699,7 +3699,7 @@ input[type="text"].select2-search__field {
 .customize-control-ast-responsive-slider .ast-responsive-slider-reset {
   color: rgba(0, 0, 0, 0.2);
   position: absolute;
-  top: -28px;
+  top: -34px;
   left: 1.5em;
   display: inline-block;
   -webkit-transition: color 0.5s ease-in;
